2006-01-27  Derek Atkins  <derek@ihtfp.com>

	Get "make distcheck" to work....
	* src/import-export/test/Makefile.am:
	  Added src/scm directory to test environment
	* lib/goffice-0.0.4/Makefile.am:
	  Don't install libgoffice-1.pc, but distribute it
	* lib/libgsf-1.12.3/tests/Makefile.am:
	  Link to the proper location of libgsf-1.la
	* lib/libgsf-1.12.3/Makefile.am:
	  Don't install the gsf .pc files, but distribute them.
	* lib/Makefile.am:
	  Use DIST_SUBDIRS to distribute qof, gsf, and goffice
	* configure.in:
	  fix QOF_LIBS to use builddir, not srcdir
	* Makefile.am:
	  add po/POTFILES.in to the dist
	  link gsf into the srcdir, not the builddir
	* src/report/report-system/Makefile.am:
	  make sure we distribute gw-report-system.h
	* src/bin/Makefile.am:
	  clean i18n.h in distclean

2006-01-26  David Hampton  <hampton@employees.org>

	* configure.in: Default the --enable-compile-warnings argument to
	yes.

	* src/gnome/window-reconcile.c:
	* src/gnome/glade/tax.glade:
	* src/gnome/glade/reconcile.glade:
	* src/gnome/dialog-tax-info.c: More HIG changes.

	* src/report/report-system/gnc-report.[ch]:
	* src/report/report-gnome/window-report.[ch]:
	* src/gnome/top-level.c: Fix compilation warnings.

2006-01-26  Derek Atkins  <derek@ihtfp.com>

	* configure.in: fail if we find libgsf >= 1.12.2 but not libgsf-gnome.
	  This is instead of configure succeeding and then failing the
	  build later.

2006-01-24  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/gnc-hbci-gettrans.h: Factor out importing
	functions that might be useful for mt940 importer.

	* src/import-export/hbci/gnc-hbci-transfer.c: Fix wrong amount
	sign.

2006-01-23  Derek Atkins  <derek@ihtfp.com>

	* src/engine/test/Makefile.am: add explicit libdep on libcore-utils.la

2006-01-23  Neil Williams <linux@codehelp.co.uk>

	* src/engine/Transaction.c : Let the backend
	work with splits without checking for the parent Trans
	* src/gnome/glade/chart-export.glade : glade-fixup change.